--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<div class="card-white" id="intro">
 				<h1>Hello I'm Gauthier!</h1>
-				<img src="images/Profile-picture.jpeg" id= "profilepic">
+				<img src="images/profile-picture.jpeg" id= "profilepic">
 				<p>
 					I love music, I play piano since i'm five years old and today I produce my own electronic/pop music. I have my first album coming out soon! AFter graduating from ESSEC, I want to work in the music industry.
 				</p>
