--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1>Hello I'm Gauthier!</h1>
 				<img src="images/profile-picture.jpeg" id= "profilepic">
 				<p>
-					I love music, I play piano since i'm five years old and today I produce my own electronic/pop music. I have my first album coming out soon! AFter graduating from ESSEC, I want to work in the music industry.
+					I love music, I play piano since i'm five years old and today I produce my own electronic/pop music. I have my first album coming out soon! After graduating from ESSEC, I want to work in the music industry.
 				</p>
 				<a href="https://www.linkedin.com/in/gauthier-lagrange-779989186/" target="_blank" class="btn-purple">discover my work</a>
 			</div>
